--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,9 @@
 body {
     padding: 0;
     margin: 0;
+    color: #e2e2e2;
+    font-family: sans-serif;
+    text-align: center;
     background: linear-gradient(270deg, #246655, #2e3030);
     background-size: 400% 400%;
 
