Styled the Magic-8-ball

--- a/Style.css
+++ b/Style.css
@@ -27,3 +27,9 @@ body {
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
+
+#Magic-8-ball  {
+    height: 250px;
+    width: 20%;
+    background-color: #af0d0d;
+}
