--- a/Style.css
+++ b/Style.css
@@ -31,5 +31,9 @@ body {
 #Magic-8-ball  {
     height: 250px;
     width: 20%;
+    border-radius: 50%;
     background-color: #af0d0d;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
