--- a/Style.css
+++ b/Style.css
@@ -35,5 +35,6 @@ body {
     background-color: #af0d0d;
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    align-items: center;
+    flex-direction: row;
 }
