--- a/Style.css
+++ b/Style.css
@@ -33,5 +33,8 @@ body {
     width: 20%;
     border-radius: 50%;
     background-color: #af0d0d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: auto;
 }
