--- a/Style.css
+++ b/Style.css
@@ -32,7 +32,7 @@ body {
     height: 350px;
     width: 350px;
     border-radius: 50%;
-    background-color: #3a3434;
+    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,14 +44,15 @@ body {
     width: 100%;
     min-width: 5pc;
     font-size: 3pc;
-    color: #fff;
-    background-color: #3a3434;
+    color: #222;
+    background-color: #ffffff;
     border: 0;
     border-radius: 50%
 }
 
 #Magic-8-ball-border {
-    border: 2pc solid #7700ff;
+    border: 2pc solid #fafafa;
+    background-color: #ffffff;
     border-radius: 50%;
     padding: 2pc;
 }
