--- a/Style.css
+++ b/Style.css
@@ -49,3 +49,10 @@ body {
     border: 0;
     border-radius: 50%
 }
+
+#Magic-8-ball-border {
+    border: 2pc solid #fafafa;
+    background-color: #ffffff;
+    border-radius: 50%;
+    padding: 2pc;
+}
