--- a/Style.css
+++ b/Style.css
@@ -78,6 +78,7 @@ body {
     height: 2.5pc;
     width: 10pc;
     border: 5px solid #222;
+    background-color: #243066;
     border-radius: 10pc;
     font-size: large;
 }
