--- a/Style.css
+++ b/Style.css
@@ -29,8 +29,8 @@ body {
 }
 
 #Magic-8-ball  {
-    height: 350px;
-    width: 350px;
+    height: 450px;
+    width: 450px;
     border-radius: 50%;
     background-color: #000000;
     display: flex;
@@ -40,14 +40,16 @@ body {
 }
 
 #Answer {
-    height: 3pc;
-    width: 5pc;
-    min-width: 5pc;
-    font-size: 1pc;
+    height: 5vh;
+    width: 70px;
+    font-size: 50px;
+    padding: 50px;
+    text-align: center;
     color: #222;
     background-color: #e2e2e2;
-    border: 0;
-    border-radius: 50%;
+}
+
+#Answe h1 {
 }
 
 #Magic-8-ball-border {
